--- a/alga-stock/package.json
+++ b/alga-stock/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "sweetalert2": "^10.9.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -24,7 +25,7 @@
   "eslintConfig": {
     "extends": "react-app",
     "rules": {
-      "react-hooks/exhaustive-deps": "off" 
+      "react-hooks/exhaustive-deps": "off"
     }
   },
   "browserslist": {
