--- a/alga-stock/package.json
+++ b/alga-stock/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.2",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sweetalert2": "^10.9.0",
     "typescript": "~3.7.2"
   },
